force-app/main/default/objects/Lead/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POOR</fullName>
            </value>
            <value>
                <fullName>FAIR</fullName>
            </value>
            <value>
                <fullName>GOOD</fullName>
            </value>
            <value>
                <fullName>EXCELLENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>