force-app/main/default/objects/Lead/fields/Eligibility_Reason__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Reason__c</fullName>
    <label>Eligibility Reason</label>
    <type>TextArea</type>
</CustomField>