force-app/main/default/objects/Lead/fields/Eligibility_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Recommendation__c</fullName>
    <label>Eligibility Recommendation</label>
    <type>TextArea</type>
</CustomField>