force-app/main/default/objects/Lead/fields/Eligibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Score__c</fullName>
    <label>Eligibility Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>