force-app/main/default/objects/Lead/fields/Existing_Debt_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Existing_Debt_Per_Month__c</fullName>
    <label>Existing Debt Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>