force-app/main/default/objects/Lead/fields/Lead_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lead_Summary__c</fullName>
    <inlineHelpText>AI generated</inlineHelpText>
    <label>Lead Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>